--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'io.gitlab.arturbosch.detekt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -55,9 +56,9 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$activityKtxVersion"
 
     // Image Support
-    implementation "com.github.bumptech.glide:glide:4.14.1"
     implementation "androidx.core:core-ktx:$kotlinCoreVersion"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.14.1"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Test
     testImplementation "junit:junit:$junitVersion"
