--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,8 @@ gsonVersion=2.8.2
 kotlinCoreVersion=1.10.1
 kotlinPluginVersion=1.8.22
 kotlinVersion=1.8.22
+leakCanaryVersion=2.11
+lottieVersion=6.0.1
 materialVersion=1.9.0
 okHttpversion=4.10.0
 retrofitversion=2.9.0
