General: Adding sorting to profile and strings

--- a/gradle.properties
+++ b/gradle.properties
@@ -61,3 +61,8 @@ timberVersion=5.0.1
 expressoCoreVersion=3.5.1
 junitExtVersion=1.1.5
 junitVersion=4.13.2
+mockkVersion=1.10.0
+mockitoCoreVersion=3.9.0
+mockitoInlineVersion=5.2.0
+corutinesTestVersion=1.2.2
+coreTestingVersion=2.2.0
